--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p style="color:white; font-size: 20px;">
                     Hello This Is ICT-HOPE Subject Portfolio That Contains Links To Our Presentation 
                 </p>
-                <a href="portfolio.html" class="btn"> View Our Work</a>
+                <a href="https://www.canva.com/design/DAFvPgKEXSQ/ivYUr3rU8oKM8xTwCYReaQ/edit?utm_content=DAFvPgKEXSQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn"> View Our Work</a>
             </div>
         </div>
     </body>
