--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </nav>
             <div class="content">
                 <span class="title"> School Portfolio </span>
-                <h1>Hello, This Is An<span> Group 2 Website </span></h1>
-                <p style="color:white; font-size: 20px;">
+                <h1>Hello, This Is<span> Group 2 Official Website </span></h1>
+                <p style="color:white; font-size: 30px;">
                     Hello This Is ICT-HOPE Subject Portfolio That Contains Links To Our Presentation 
                 </p>
-                <a href="https://www.canva.com/design/DAFvPgKEXSQ/ivYUr3rU8oKM8xTwCYReaQ/edit?utm_content=DAFvPgKEXSQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn"> View Our Work</a>
+                <a href="portfolio.html" class="btn"> View Our Work</a>
             </div>
         </div>
     </body>
